Add chomping noise, and automatically close the chest ui when the player is chomped.

--- a/src/main/resources/assets/hungrychests/lang/en_us.json
+++ b/src/main/resources/assets/hungrychests/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "block.hungrychests.hungry_chest": "Hungry Chest",
-  "item.hungrychests.padded_glove": "Padded Glove"
+  "item.hungrychests.padded_glove": "Padded Glove",
+  "subtitle.hungry_chest.chomp": "Hungry Chest chomps"
 }
